<resources>
    <string name="app_name">iHelp!</string>
    <string name="this_feild_is_required">This feild is required</string>
    <string name="length_must_be_at_least">Length mustbe atleast</string>
    <string name="characters_long">characters long</string>
    <string name="email_malformed">Email is malformed</string>
    <string name="username_invalid">Username is invalid, it must only contain letters (A–z) or digits (0–9) and white spaces (_) and It must not start with a number.</string>
    <string name="password_is_weak">Password is so weak, it must contain letters A–z and digits 0–9</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="you_don_t_have_an_account_sign_up">You don\'t have an account? Sign up</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="close">Close</string>
    <string name="something_went_wrong">Something went wrong! Please try again.</string>
    <string name="create_new_account">Create New Account</string>
    <string name="not_registered_yet">Not registered yet ?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="restore_password">Restore password</string>
    <string name="repeat">Repeat</string>
    <string name="new_password">New password</string>
    <string name="done">Done</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="menu">Menu</string>
    <string name="filters">Filters</string>
    <string name="info_item_icon">info</string>
    <string name="save">Save</string>
    <string name="description">description</string>
    <string name="registration_error">Registration error</string>
    <string name="logining_error">Logining error</string>
    <string name="changing_password_error">Changing password error</string>
    <string name="creating_user">Creating user</string>
    <string name="logining_user">Logining user</string>
    <string name="changing_password">Changing password</string>
    <string name="please_wait">Please wait…</string>
    <string name="passwords_not_match">Passwords don\'t match</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="enter_your_account">Enter Your Account</string>
    <string name="forgot_password_reset">Forgot Password? <b><u>Reset</u></b></string>
    <string name="reset_password">Rest Password</string>
    <string name="no_connection">No Connection</string>
    <string name="device_not_connected">Your device is not connected to the internet! Please reconnect and try again.</string>
    <string name="refresh">Refresh</string>
    <string name="something_went_wrong_internet_connection">Failed to load next data! Please check your internet connection and try again.</string>
    <string name="try_again">Try Again</string>
    <string name="account_type">Account Type</string>
    <string name="volunteer">Volunteer</string>
    <string name="organization">Organization</string>
    <string name="verify">Verify</string>
    <string name="check_your_mail">Please check your email for instructions</string>
    <string name="reset_request_failed">Reset Request Failed</string>
    <string name="sending_request">Sending Request…</string>
    <string name="request_sent">Request Sent</string>
    <string name="full_name">Full name</string>
    <string name="specialization">Specialization</string>
    <string name="info">Tell something about you </string>
    <string name="contacts">Contacts</string>
    <string name="photo">Photo</string>
    <string name="location">Location</string>
    <string name="events">Events</string>


    <string name="image">image</string>
    <string name="profession_type">Profession Type</string>
    <string name="volunteers">Volunteers</string>
    <string name="vacancies">vacancies</string>


</resources>
