<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:background="@color/colorBackground"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:fillViewport="true"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

    <LinearLayout
            android:background="@drawable/background_dialog"
            android:layout_margin="8dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
                android:layout_margin="16dp"
                android:textSize="22sp"
                android:gravity="center"
                android:textColor="@color/colorGrayLight"
                android:text="@string/enter_your_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <com.tamimattafi.ihelp.app.presentation.custom.views.FormInputLayout
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/usernameLayout"
                app:hintTextColor="@color/colorGrayDark"
                android:textColorHint="@color/colorGrayLight">
            <com.tamimattafi.ihelp.app.presentation.custom.views.FormEditText
                    android:textColor="@color/colorGrayDark"
                    android:drawableTint="@color/colorGrayLight"
                    tools:targetApi="m"
                    android:drawableStart="@drawable/ic_profile"
                    android:drawablePadding="8dp"
                    android:drawableLeft="@drawable/ic_profile"
                    android:id="@+id/username"
                    android:textSize="14sp"
                    android:background="@drawable/background_edit_text_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/username"
                    />
        </com.tamimattafi.ihelp.app.presentation.custom.views.FormInputLayout>

        <com.tamimattafi.ihelp.app.presentation.custom.views.FormInputLayout
                style="@style/Widget.Design.TextInputLayout"
                app:hintTextColor="@color/colorGrayDark"
                android:textColorHint="@color/colorGrayLight"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorGrayLight"
                android:id="@+id/passwordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <com.tamimattafi.ihelp.app.presentation.custom.views.FormEditText
                    android:drawableTint="@color/colorGrayLight"
                    tools:targetApi="m"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="8dp"
                    android:drawableLeft="@drawable/ic_password"
                    android:textSize="14sp"
                    android:textColor="@color/colorGrayDark"
                    android:background="@drawable/background_edit_text_field"
                    android:id="@+id/password"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textPassword"
                      android:hint="@string/password"/>
        </com.tamimattafi.ihelp.app.presentation.custom.views.FormInputLayout>

        <com.google.android.material.button.MaterialButton
                style="@style/MaterialButtonAccent"
            android:id="@+id/login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="16dp"
            app:iconGravity="textStart"
            app:icon="@drawable/ic_check"
            android:text="@string/login"/>

        <TextView
                android:id="@+id/reset"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:textColor="@color/colorGrayDark"
                android:text="@string/forgot_password_reset"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:layout_marginTop="48dp"
                android:layout_marginBottom="12dp"
                android:gravity="center"
                android:textColor="@color/colorGrayLight"
                android:text="@string/not_registered_yet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
                style="@style/MaterialButtonRed"
                android:id="@+id/register"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/create_new_account"
                app:iconGravity="textStart"
                app:icon="@drawable/ic_email"/>
    </LinearLayout>
</ScrollView>