<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
>
    <include layout="@layout/toolbar_registration"/>

    <androidx.core.widget.NestedScrollView
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            android:background="@color/colorForeground"
            android:fillViewport="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    >
    <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:layout_margin="16dp"
                android:textSize="24sp"
                android:gravity="center"
                android:textColor="@color/colorGrayLight"
                android:text="@string/create_new_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <com.tamimattafi.ihelp.app.presentation.custom.views.FormInputLayout
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/usernameLayout"
                app:hintTextColor="@color/colorGrayDark"
                android:textColorHint="@color/colorGrayLight">
            <com.tamimattafi.ihelp.app.presentation.custom.views.FormEditText
                    android:textColor="@color/colorGrayDark"
                    android:id="@+id/username"
                    android:textSize="14sp"
                    android:background="@drawable/background_edit_text_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/username" />
        </com.tamimattafi.ihelp.app.presentation.custom.views.FormInputLayout>

        <com.tamimattafi.ihelp.app.presentation.custom.views.FormInputLayout
                style="@style/Widget.Design.TextInputLayout"
                app:hintTextColor="@color/colorGrayDark"
                android:textColorHint="@color/colorGrayLight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/emailLayout">
            <com.tamimattafi.ihelp.app.presentation.custom.views.FormEditText
                    android:textSize="14sp"
                    android:textColor="@color/colorGrayDark"
                    android:background="@drawable/background_edit_text_field"
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email" />
        </com.tamimattafi.ihelp.app.presentation.custom.views.FormInputLayout>

        <com.tamimattafi.ihelp.app.presentation.custom.views.FormInputLayout
                style="@style/Widget.Design.TextInputLayout"
                app:hintTextColor="@color/colorGrayDark"
                android:textColorHint="@color/colorGrayLight"
                app:passwordToggleTint="@color/colorGrayLight"
                app:passwordToggleEnabled="true"
                android:id="@+id/passwordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <com.tamimattafi.ihelp.app.presentation.custom.views.FormEditText
                    android:textSize="14sp"
                    android:textColor="@color/colorGrayDark"
                    android:background="@drawable/background_edit_text_field"
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password"/>
        </com.tamimattafi.ihelp.app.presentation.custom.views.FormInputLayout>

        <com.google.android.material.button.MaterialButton
                style="@style/MaterialButtonAccent"
                android:id="@+id/registerBtn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="16dp"
                android:text="@string/register"/>
    </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>