<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:background="@drawable/background_dialog"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
            android:text="@string/filters"
            android:padding="16dp"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/colorGrayDark"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/label"/>
    <com.tamimattafi.ihelp.app.presentation.custom.views.MaterialMenuItem
            app:drawable="@drawable/ic_sort_by"
            app:infoType="text_icon"
            app:hintGravity="end"
            android:id="@+id/orderBy"
            android:padding="12dp"
            app:label="Order By"
            app:hint="lastModified"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <com.tamimattafi.ihelp.app.presentation.custom.views.MaterialMenuItem
            app:hintGravity="end"
            android:id="@+id/direction"
            app:drawable="@drawable/ic_direction"
            app:infoType="text_icon"
            android:padding="12dp"
            app:label="Direction"
            app:hint="Ascending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hint"
            android:id="@+id/linearLayout2">
        <com.google.android.material.button.MaterialButton
                app:icon="@drawable/ic_cancel"
                app:iconGravity="textStart"
                android:layout_margin="8dp"
                app:iconTint="@color/colorGrayLight"
                android:textColor="@color/colorGrayLight"
                style="@style/MaterialTextButton"
                android:layout_height="wrap_content"
                android:id="@+id/cancel"
                android:text="@string/cancel"
                android:layout_weight="1"
                android:layout_width="0dp"/>
        <com.google.android.material.button.MaterialButton
                app:iconGravity="textStart"
                style="@style/MaterialButtonAccent"
                app:icon="@drawable/ic_check"
                android:layout_margin="8dp"
                android:layout_height="wrap_content"
                android:id="@+id/save"
                android:text="@string/save"
                android:layout_weight="1"
                android:layout_width="0dp"/>
    </LinearLayout>
</LinearLayout>